--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,15 @@
 
 # "temporary" build files
 /target
+
+*.iml
+.gradle
+.idea
+/local.properties
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
